# rexc

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
cmake/: generate_stdlib_source.cmake
docs/: Rexc.epub  Rexy.epub  build.mk  ch01-hello.md  ch01-source-text.md  ch02-parser.md  ch02-values.md  ch03-bindings.md  ch03-semantics.md  ch04-control-flow.md  ch04-ir.md  ch05-match.md  ch05-x86-codegen.md  ch06-drunix-elf.md  ch06-structs.md  ch07-enums.md  ch08-tuples-slices.md  ch09-pointers-statics.md  ch10-unsafe.md  ch11-modules.md  ch12-generics.md  ch13-stdlib.md  ch14-building.md  ch14-drunix.md  cover.md  epub-copyright.md  epub-metadata.yaml  epub.css  generate_cover.py  implementation-plan.md  partI-getting-started.md  partI-source-to-syntax.md  partII-control-flow.md  partII-meaning.md  partIII-assembly.md  partIII-data.md  partIV-drunix-programs.md  partIV-memory.md  partV-organizing.md  partVI-stdlib-drunix.md  (+13 more)
docs/superpowers/plans/: 2026-04-24-rexc-compiler-foundation.md  2026-04-25-control-flow.md  2026-04-25-macos-arm64-binary.md  2026-04-25-rexc-core-primitive-types.md  2026-04-25-rexc-layered-standard-library.md  2026-04-26-default-prelude-policy.md  2026-04-26-public-private-item-rules.md  2026-04-26-rexc-stdlib-string-length.md  2026-04-26-stdlib-namespace-rules.md
docs/superpowers/specs/: 2026-04-24-rexc-compiler-foundation-design.md  2026-04-25-rexc-core-types-design.md  2026-04-25-rexc-layered-standard-library-design.md  2026-04-26-vscode-rexc-extension-design.md
examples/: add.rx  arena_vec_demo.rx  bool.rx  branch.rx  cast.rx  core.rx  defer_demo.rx  generic_vec_demo.rx  hash_demo.rx  hashmap_demo.rx  loop.rx  pointer.rx  pointer_index.rx  std_io.rx  std_numbers.rx  std_strings.rx  std_two_lines.rx  stdlib.rx  types.rx  uninit_let_demo.rx  wide.rx
examples/modules/: main.rx  math.rx
examples/rxy/hello/: Rexy.toml
grammar/: Rexc.g4  Rexy.g4
include/rexc/: ast.hpp  codegen.hpp  codegen_arm64.hpp  codegen_x86.hpp  diagnostics.hpp  ir.hpp  lower_ir.hpp  parse.hpp  sema.hpp  source.hpp  stdlib.hpp  target.hpp  types.hpp
scripts/: package_macos_arm64.sh
src/: ast.cpp  codegen_arm64.cpp  codegen_x86.cpp  diagnostics.cpp  ir.cpp  lower_ir.cpp  main.cpp  names.hpp  parse.cpp  sema.cpp  source.cpp  stdlib.cpp  target.cpp  types.cpp
src/rxy/: main.cpp  todo.hpp  todo_impl.cpp
src/rxy/build_script/: build_script.cpp  build_script.hpp
src/rxy/cache/: cache.cpp  cache.hpp
src/rxy/cli/: cli.cpp  cli.hpp
src/rxy/diag/: diag.cpp  diag.hpp
src/rxy/hash/: sha256.cpp  sha256.hpp
src/rxy/lockfile/: lockfile.cpp  lockfile.hpp
src/rxy/manifest/: manifest.cpp  manifest.hpp
src/rxy/process/: process.cpp  process.hpp
src/rxy/registry/: registry.cpp  registry.hpp
src/rxy/resolver/: resolver.cpp  resolver.hpp
src/rxy/semver/: semver.cpp  semver.hpp
src/rxy/source/: source.cpp  source.hpp
src/rxy/util/: fs.cpp  fs.hpp  tty.cpp  tty.hpp
src/rxy/workspace/: workspace.cpp  workspace.hpp
src/stdlib/: source.cpp.in  source.hpp  stdlib.cpp  type_helpers.hpp
src/stdlib/alloc/: alloc.rx  library.cpp  library.hpp
src/stdlib/core/: hash.rx  library.cpp  library.hpp  mem.rx  num.rx  option.rx  result.rx  str.rx
src/stdlib/std/: fs.rx  io.rx  library.cpp  library.hpp  path.rx  process.rx  time.rx  vec.rx
src/stdlib/sys/: runtime.hpp  runtime_arm64_drunix.cpp  runtime_arm64_macos.cpp  runtime_i386.cpp  runtime_i386_drunix.cpp  runtime_i386_linux.cpp  runtime_x86_64.cpp  runtime_x86_64_linux.cpp
tests/: assemble_smoke.sh  cli_smoke.sh  codegen_arm64_tests.cpp  codegen_tests.cpp  diagnostics_tests.cpp  frontend_tests.cpp  ir_tests.cpp  parser_architecture.sh  sema_tests.cpp  smoke_tests.cpp  stdlib_tests.cpp  target_tests.cpp  test_main.cpp  test_support.hpp  types_tests.cpp
tests/rxy/: build_script_tests.cpp  cache_tests.cpp  cli_tests.cpp  deps_tests.cpp  lockfile_tests.cpp  manifest_tests.cpp  offline_tests.cpp  process_tests.cpp  registry_tests.cpp  semver_tests.cpp  sha256_tests.cpp  smoke.sh  smoke_b.sh  smoke_c.sh  smoke_d.sh  smoke_e.sh  smoke_f.sh  smoke_g.sh  smoke_h.sh  test_main.cpp  test_main.hpp  workspace_tests.cpp
tools/vscode-rexc/: README.md  package.json
tools/vscode-rexc/scripts/: verify-extension.mjs
tools/vscode-rexy/: .vscodeignore  README.md  language-configuration.json  package.json
tools/vscode-rexy/scripts/: verify-extension.mjs
tools/vscode-rexy/syntaxes/: rexy.tmLanguage.json
